All files are moved to the same folder

--- a/TaskEase/Makefile
+++ b/TaskEase/Makefile
@@ -95,10 +95,9 @@ install:
 	vagrant halt
 
 start:
-    # Start Vagrant Machine
-	vagrant up
+    # Start Vagrant Machine# vagrant up
 
     # Install NPM dependencies
-	vagrant ssh -c "cd $(PROJECTS_FOLDER)/$(PROJECT_NAME) && npm update"
+   # vagrant ssh -c "cd $(PROJECTS_FOLDER)/$(PROJECT_NAME) && npm update"
 	vagrant ssh -c "echo fs.inotify.max_user_watches=524288 | sudo tee -a /etc/sysctl.conf && sudo sysctl -p"
 	vagrant ssh -c "sudo apt install firefox"
